<resources>
    <string name="app_name">Pomodoro</string>
    <string name="work_state">Work</string>
    <string name="break_state_short">Short Break</string>
    <string name="break_state_long">Long Break</string>
    <string name="default_notification_channel_id">notification_channel</string>


    <!--Settings Page-->
    <string name="settings_title">Settings</string>
    <string name="settings_focus">Focus</string>
    <string name="settings_short_break">Short break</string>
    <string name="settings_long_break">Long break</string>
    <string name="settings_cycle_count">Pomodoros</string>
    <string name="settings_automatic_breaks">Auto start breaks</string>
    <string name="settings_automatic_work_cycles">Auto start work time</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_end_focus_sound">End focus Sound</string>
    <string name="settings_end_break_sound">End break sound</string>
    <string name="settings_choose">Choose  ></string>
    <string name="settings_hours">Hours</string>
    <string name="settings_minutes">Minutes</string>

    <!--End Focus and Break Soun Page-->
    <string name="none">None</string>


    <!--Start Page-->
    <string name="set_your">Set Your</string>
    <string name="start">Start</string>

</resources>