<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/main_background"
        tools:context=".ui.main_page.SettingsPageFragment">

        <android.widget.Toolbar
            android:id="@+id/tool_bar_settings_page"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/black">

            <ImageButton
                android:id="@+id/tool_bar_settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_left_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/settings_title"
                android:textColor="@color/black"
                android:textSize="26sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="4dp" />


        </android.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/relative_layout_dropdown_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar_settings_page">

            <TextView
                android:id="@+id/focus_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="27dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/settings_focus"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dropdown_focus_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/dropdown_focus_btn"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/orange"
                android:textSize="16sp"
                tools:text="25 min" />

            <ImageButton
                android:id="@+id/dropdown_focus_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="27dp"
                android:background="@drawable/ic_down_arrow" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_dropdown_short_break"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout_dropdown_focus">

            <TextView
                android:id="@+id/short_break_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="27dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/settings_short_break"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dropdown_short_break_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/dropdown_short_break_btn"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/orange"
                android:textSize="16sp"
                tools:text="5 min" />

            <ImageButton
                android:id="@+id/dropdown_short_break_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="27dp"
                android:background="@drawable/ic_down_arrow" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_dropdown_long_break"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout_dropdown_short_break">

            <TextView
                android:id="@+id/long_break_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="27dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/settings_long_break"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dropdown_long_break_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/dropdown_long_break_btn"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/orange"
                android:textSize="16sp"
                tools:text="15 min" />

            <ImageButton
                android:id="@+id/dropdown_long_break_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="27dp"
                android:background="@drawable/ic_down_arrow" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_dropdown_number_of_cycles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout_dropdown_long_break">

            <TextView
                android:id="@+id/cycle_count_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="27dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/settings_cycle_count"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dropdown_cycle_count_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/dropdown_cycle_count_btn"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/orange"
                android:textSize="16sp"
                tools:text="4" />

            <ImageButton
                android:id="@+id/dropdown_cycle_count_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="27dp"
                android:background="@drawable/ic_down_arrow" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_dropdown_auto_break"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout_dropdown_number_of_cycles">

            <TextView
                android:id="@+id/auto_break_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/settings_automatic_breaks"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/auto_break_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:height="30dp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_dropdown_auto_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout_dropdown_auto_break">

            <TextView
                android:id="@+id/auto_work_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/settings_automatic_work_cycles"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/auto_work_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:height="30dp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_dropdown_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout_dropdown_auto_work">

            <TextView
                android:id="@+id/notifications_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/settings_notifications"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_dropdown_end_focus_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout_dropdown_notifications">

            <TextView
                android:id="@+id/end_focus_sound_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/settings_end_focus_sound"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dropdown_end_focus_sound_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/dropdown_end_focus_sound_btn"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/poppins"
                android:text="@string/settings_choose"
                android:textColor="@color/orange"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/dropdown_end_focus_sound_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_right_arrow_orange" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_dropdown_end_break_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout_dropdown_end_focus_sound">

            <TextView
                android:id="@+id/end_break_sound_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/settings_end_break_sound"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dropdown_end_break_sound_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/dropdown_end_break_sound_btn"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/poppins"
                android:text="@string/settings_choose"
                android:textColor="@color/orange"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/dropdown_end_break_sound_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_right_arrow_orange" />


        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
